fixed child spacing

--- a/slackline/style.css
+++ b/slackline/style.css
@@ -172,6 +172,7 @@ footer .social img{
     display:block;
     margin:0 auto;
     margin-right: 48%;
+    margin-top: 20px;
 }
 .bird{
     width: 48%;
@@ -179,6 +180,7 @@ footer .social img{
     float: right;
     margin:0 auto;
     box-shadow: 5px 5px 10px black;
+    margin-top: 20px;
 }
 /* Page 4 | Web Component Exercise */
 
